# ChangeLog for dev-python/Imaging
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/Imaging/Attic/ChangeLog,v 1.13 2004/02/26 19:00:38 bazik Exp $

  26 Feb 2004; Sven Blumenstein <bazik@gentoo.org> Imaging-1.1.4.ebuild:
  Stable on sparc.

  15 Jul 2003; Alastair Tse <liquidx@gentoo.org> Imaging-1.1.4.ebuild,
  files/Imaging-1.1.4-setup.py.patch:
  add patch to fix installations with tkinter (#24351)

*Imaging-1.1.4 (02 Jun 2003)

  02 Jun 2003; Alastair Tse <liquidx@gentoo.org> Imaging-1.1.4.ebuild:
  removing tk-8.4 workaround because it is fixed in 1.1.4. version bumping and
  various ebuild cleanups.

*Imaging-1.1.3-r2 (16 May 2003)

  16 May 2003; Alastair Tse <liquidx@gentoo.org> Imaging-1.1.3-r2.ebuild:
  workaround for new tk-8.4.x. thanks to Hyriand <hyriand@thegraveyard.org>
  (#21013)

*Imaging-1.1.3-r1 (05 Mar 2003)

  25 Mar 2003; Alastair Tse <liquidx@gentoo.org> Imaging-1.1.3-r1.ebuild:
  bumping to stable

  05 Mar 2003; Jason Shoemaker <kutsuya@gentoo.org> Imaging-1.1.3-r1.ebuild:
  Modified to take advantage of distutils.eclass. Removed all but ~x86 arch,
  because of the major revision.

*Imaging-1.1.3 (3 Nov 2002)

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
  
  3 Nov 2002; Nicholas Henke <roughneck@gentoo.org> Imaging-1.1.3.ebuild :
  Bumped version to 1.1.3.

*Imaging-1.1.2-r2 (1 Feb 2002)
  
  20 Oct 2002; Calum Selkirk <cselkirk@gentoo.org> Imaging-1.1.2-r2.euild :

  Added ppc to KEYWORDS.

  26 Jul 2002; George Shapovalov <george@gentoo.org> Imaging-1.1.2-r2.euild :
  added KEYWORDS,SLOT,LICENSE

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about