@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/Imaging
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Imaging/Attic/ChangeLog,v 1.13 2004/02/26 19:00:38 bazik Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Imaging/Attic/ChangeLog,v 1.14 2004/03/14 21:17:31 avenj Exp $
+
+  14 Mar 2004; Jon Portnoy <avenj@gentoo.org> Imaging-1.1.4.ebuild :
+  AMD64 keywords.
 
   26 Feb 2004; Sven Blumenstein <bazik@gentoo.org> Imaging-1.1.4.ebuild:
   Stable on sparc.
